# data-science-portfolio-projects

./: README.md
nigeria_dfs_analysis/: CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
nigeria_dfs_analysis/configs/: config.yaml
nigeria_dfs_analysis/dashboard/: app.py
nigeria_dfs_analysis/data/processed/: competitors_processed.csv  financial_model.xlsx  nigeria_combined.csv
nigeria_dfs_analysis/data/raw/: wb_indicators_raw.csv
nigeria_dfs_analysis/notebooks/: 00_project_overview_and_business_question.ipynb  01_dataset_selection_and_access.ipynb  02_data_loading_and_first_inspection.ipynb  03_data_quality_checks.ipynb  04_data_cleaning_and_feature_engineering.ipynb  05_exploratory_analysis.ipynb  06_market_sizing_tam_sam_som.ipynb  07_competitive_landscape.ipynb  08_financial_modelling_and_valuation.ipynb  09_risk_assessment_framework.ipynb  10_statistical_inference.ipynb  11_publication_figures_and_tables.ipynb
nigeria_dfs_analysis/paper_or_report/: datasheet.md  graphical_abstract_notes.md  limitations.md  model_card.md  references.bib  report.md  supplementary_material.md
nigeria_dfs_analysis/reports/tables/: cagr_robustness_nip_value_bn_ngn.csv  cagr_robustness_nip_volume_m.csv  comparable_valuation.csv  competitor_benchmarking.csv  (+15 more)
nigeria_dfs_analysis/scripts/: download_data.py  generate_notebooks.py  run_all.py
nigeria_dfs_analysis/src/: __init__.py  config.py  data_loader.py  financial_model.py  market_sizing.py  preprocessing.py  risk_model.py  stats.py  viz.py
nigeria_dfs_analysis/tests/: test_all.py
(+69 files in other folders)
